# Kokkos_test

./: CMakeLists.txt  README.md  main.cpp
src/datamodel/: collection.hpp  lightAMR.hpp  lightAMR_utils.h  mesh_utils.h
src/io/: CMakeLists.txt  Reader.hpp  Reader_Hercule.cpp  Reader_Hercule.hpp
src/utils/: array.hpp  definition.hpp  hzlnt.hpp
